[package]
name = "party-types"
version = "0.1.0"
authors = ["Roland Kuhn <rk@rkuhn.info>"]
edition = "2018"
description = "Implementation of endpoint types suitable for hosting multi-party session type projections"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow="1"
async-trait = "0.1.42"
crossbeam-channel="0.5"
futures-channel = "0.3.13"
futures-lite = "1.11.3"
